--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hi",
+  "name": "node-ejs",
   "version": "1.0.0",
   "description": "fake alarms",
   "main": "index.js",
@@ -8,7 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": 
+  {
     "express": "^4.13.4",
     "twitter": "^1.2.5"
   }
